--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,2 +1,3 @@
 <!-- <p>post works!</p> -->
-<img [src]="postImg">
+<img [src]="postImg" (click)="imgSelected.emit(postImg)">
+<ng-content></ng-content>
